# crypto-scanner

./: .gitignore  README.md  TODO.txt  demo-reset.sh  record-demo.sh  seed-labels.sh
system/backend/: .dockerignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml
system/backend/apps/agents/: api.py  apps.py  models.py  services.py
system/backend/apps/assets/: api.py  models.py  services.py
system/backend/apps/core/: api.py  errors.py  logging.py  middleware.py  pagination.py  schemas.py
system/backend/apps/dashboard/: api.py
system/backend/apps/demo/: api.py  services.py
system/backend/apps/discoveries/: agent_client.py  api.py  apps.py  models.py  services.py
system/backend/apps/health/: api.py  services.py
system/backend/apps/jobs/: agent_asset_mapper.py  agent_client.py  api.py  homepage_context.py  models.py  network_scanner.py  scan_assets.py  scan_worker.py  services.py
system/backend/apps/meta/: api.py  services.py
system/backend/apps/performance/: api.py  models.py  runner.py  services.py  worker.py
system/backend/apps/risk/: api.py  (+2 more)
system/backend/fixtures/: initial_targets.json
system/backend/migration_engine/: __init__.py  engine.py  mapping_rules.json
system/backend/performance_engine/: __init__.py  engine.py
system/backend/pqc_ras/: settings.py  urls.py
system/backend/risk_engine/: __init__.py  dhs.py  engine.py  llm.py  prompts.py
system/backend/tests/: test_dhs_risk_engine.py  test_kpi_evidence.py  test_migration_engine.py  test_performance_engine.py  test_risk_engine.py  test_risk_llm.py  test_risk_prompts.py
(+365 files in other folders)
