[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-scanner-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<5.3",
    "django-ninja>=1.3,<1.5",
    "pydantic>=2.7,<3",
    "psycopg[binary]>=3.2,<4",
    "celery[redis]>=5.4,<6",
    "redis>=5,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-django>=4.8,<5",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["pqc_ras*", "apps*", "risk_engine*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pqc_ras.settings"
python_files = ["test_*.py"]
testpaths = ["tests", "apps"]
addopts = "-q"
